// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileAppConnection if we disconnect the app, it disconnects and fetches a new QR code 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Sign In
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                Open the Grafana OnCall mobile application and scan this code to sync it with your account.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="u-width-100 u-flex u-flex-center u-position-relative"
              >
                <div
                  class="root root_bordered qr-code"
                >
                  <svg
                    height="256"
                    viewBox="0 0 21 21"
                    width="256"
                  >
                    <path
                      d="M0,0 h21v21H0z"
                      fill="#FFFFFF"
                      shape-rendering="crispEdges"
                    />
                    <path
                      d="M0 0h7v1H0zM9 0h3v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM8 1h2v1H8zM12 1h1v1H12zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h1v1H8zM11 2h2v1H11zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h1v1H8zM10 3h2v1H10zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM8 4h1v1H8zM10 4h2v1H10zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM8 5h1v1H8zM10 5h1v1H10zM12 5h1v1H12zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM10 7h2v1H10zM2 8h1v1H2zM5 8h5v1H5zM11 8h1v1H11zM13 8h1v1H13zM15 8h5v1H15zM5 9h1v1H5zM9 9h1v1H9zM13 9h1v1H13zM15 9h1v1H15zM17 9h1v1H17zM20,9 h1v1H20zM0 10h3v1H0zM4 10h1v1H4zM6 10h5v1H6zM13 10h5v1H13zM20,10 h1v1H20zM0 11h1v1H0zM2 11h2v1H2zM7 11h1v1H7zM10 11h1v1H10zM12 11h4v1H12zM17 11h1v1H17zM2 12h2v1H2zM5 12h7v1H5zM13 12h5v1H13zM20,12 h1v1H20zM8 13h1v1H8zM10 13h1v1H10zM17 13h1v1H17zM20,13 h1v1H20zM0 14h7v1H0zM8 14h7v1H8zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM8 15h2v1H8zM12 15h3v1H12zM16 15h1v1H16zM19,15 h2v1H19zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM9 16h2v1H9zM13 16h1v1H13zM17,16 h4v1H17zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM9 17h1v1H9zM12 17h2v1H12zM15 17h1v1H15zM17 17h2v1H17zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM8 18h1v1H8zM10 18h2v1H10zM13 18h1v1H13zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM10 19h1v1H10zM13 19h3v1H13zM17 19h2v1H17zM0 20h7v1H0zM10 20h1v1H10zM14 20h5v1H14zM20,20 h1v1H20z"
                      fill="#000000"
                      shape-rendering="crispEdges"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a QR code if the app isn't already connected 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-lq6a48"
          >
            Loading...
             
            <div
              class="css-13pg8vy"
              data-testid="Spinner"
            >
              <i
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently disconnecting 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-lq6a48"
          >
            Loading...
             
            <div
              class="css-13pg8vy"
              data-testid="Spinner"
            >
              <i
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently fetching the QR code 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-lq6a48"
          >
            Loading...
             
            <div
              class="css-13pg8vy"
              data-testid="Spinner"
            >
              <i
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a message when the mobile app is already connected 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                App connected 
                <div
                  class="css-wf08df-Icon"
                >
                  <svg
                    class="css-eyx4do icon"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.72,8.79l-4.29,4.3L8.78,11.44a1,1,0,1,0-1.41,1.41l2.35,2.36a1,1,0,0,0,.71.29,1,1,0,0,0,.7-.29l5-5a1,1,0,0,0,0-1.42A1,1,0,0,0,14.72,8.79ZM12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
                    />
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                You can only sync one application to your account. To setup a new device, please disconnect the currently connected device first.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="disconnect__container"
              >
                <img
                  class="disconnect__qrCode"
                  src="[object Object]"
                />
                <button
                  class="css-1ed0qk5-button disconnect-button"
                  data-testid="test__disconnect"
                  type="button"
                >
                  <span
                    class="css-1mhnkuh"
                  >
                    Disconnect
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a warning when cloud is not connected 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-ztyofd-layoutChildrenWrapper"
    >
      <span
        class="root text text--secondary text--medium"
      >
        Please connect Grafana Cloud OnCall to use the mobile app
      </span>
    </div>
    <div
      class="css-ztyofd-layoutChildrenWrapper"
    >
      <a
        class="root"
        href="/a/grafana-oncall-app/cloud"
      >
        <button
          class="css-b2ba3d-button"
          type="button"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              class="css-1gebccs"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18,10.82a1,1,0,0,0-1,1V19a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V8A1,1,0,0,1,5,7h7.18a1,1,0,0,0,0-2H5A3,3,0,0,0,2,8V19a3,3,0,0,0,3,3H16a3,3,0,0,0,3-3V11.82A1,1,0,0,0,18,10.82Zm3.92-8.2a1,1,0,0,0-.54-.54A1,1,0,0,0,21,2H15a1,1,0,0,0,0,2h3.59L8.29,14.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L20,5.41V9a1,1,0,0,0,2,0V3A1,1,0,0,0,21.92,2.62Z"
              />
            </svg>
          </div>
          <span
            class="css-1mhnkuh"
          >
            Connect Grafana Cloud OnCall
          </span>
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error disconnecting the mobile app 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <span
            class="root text text--primary text--medium"
          >
            There was an error disconnecting your mobile app. Please try again.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error fetching the QR code 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-bxa289-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium text--strong"
              >
                Download
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <span
                class="root text text--primary text--medium"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-ztyofd-layoutChildrenWrapper"
            >
              <div
                class="css-1j7sh2x-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--withBackGround root--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-bxa289-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="root root_bordered root--fullWidth root--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="root text text--primary text--medium icon-text"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root root_bordered root_shadowed root--withBackGround container__box"
        >
          <span
            class="root text text--primary text--medium"
          >
            There was an error fetching your QR code. Please try again.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
